adding order modal
adding order modal

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -12,14 +12,21 @@
                     and Step-by-Step Video Guides.
                 </p>
             </div>
-            <a
+            <!-- <a
                 href="tel:+380730000000"
                 class="hero-btn"
                 data-modal-open
                 type="button"
             >
                 Order now
-            </a>
+            </a> -->
+            <button
+                class="hero-btn"
+                data-action="open-order-modal"
+                type="button"
+            >
+                Order now
+            </button>
         </div>
         <div class="swiper-container">
             <div class="swiper">
