--- a/src/html/modal-order-now.html
+++ b/src/html/modal-order-now.html
@@ -12,7 +12,7 @@
             </svg>
         </button>
         <p class="modal-title">ORDER NOW</p>
-        <form class="modal-form">
+        <form class="modal-form" id="order-form">
             <div class="modal-field">
                 <label for="user-name" class="label-text">Name</label>
                 <input type="text" name="user-name" class="modal-input" />
