header hero fix

--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,7 +1,7 @@
 <section id="hero-section">
     <div class="hero-container">
         <div class="hero-block">
-            <div class="hero-text">
+            <div class="hero-wrap">
                 <h1 class="hero-title">
                     Learn to Cook
                     <span class="hero-span">Tasty Treats' </span> Customizable
